<resources>
    <string name="app_name">Guess</string>
    <string name="game_name">猜拳游戏</string>
    <string name="stone">石头</string>
    <string name="scissors">剪刀</string>
    <string name="paper">布</string>
    <string name="confirm">确认</string>
    <string name="gamer">玩家</string>
    <string name="pc">电脑</string>
    <string name="result">结果</string>
    <string name="result_test">测试结果</string>
    <string name="win">胜利</string>
    <string name="lose">失败</string>
    <string name="draw">平局</string>
    <string name="NULL"> </string>
    <string name="text_result_test">玩家:%1$s\n电脑:%2$s</string>

</resources>